--- a/app/src/main/res/layout/fragment_national_park.xml
+++ b/app/src/main/res/layout/fragment_national_park.xml
@@ -8,26 +8,47 @@
     android:layout_margin="6dp">
 
     <!-- Park Name -->
-    <TextView
-        android:id="@+id/park_name"
-        android:text="Park Name"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <!-- Park Description -->
     <TextView
-        android:id="@+id/park_description"
-        android:text="Park Description"
-        android:textAppearance="?attr/textAppearanceListItem"
+        android:id="@+id/park_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/park_name"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginStart="8dp"
+        android:text="Park Name"
+        android:textStyle="bold"
+        android:textAppearance="?attr/textAppearanceListItem"
+        app:layout_constraintStart_toEndOf="@+id/park_image"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- TODO: Add park image -->
-    <!-- TODO: Add location or other details -->
+    <TextView
+        android:id="@+id/park_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Park Description"
+        android:lines="3"
+        android:ellipsize="end"
+        android:textAppearance="?attr/textAppearanceListItem"
+        app:layout_constraintStart_toEndOf="@+id/park_image"
+        app:layout_constraintTop_toBottomOf="@+id/park_name" />
+
+    <ImageView
+        android:id="@+id/park_image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@android:drawable/ic_menu_gallery" />
+
+    <TextView
+        android:id="@+id/park_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Location"
+        android:textAppearance="?attr/textAppearanceListItem"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/park_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
